--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
+{% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
-  <title>Title</title>
+  <title>AAAAAAAAAAAAAAA</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="stylesheet" type="text/css"  href="{% static 'membros/styles/style.css' %}">
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
