--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -6,24 +6,37 @@
   <div class="container">
     <div class="row row-cols-3">
       {% for membro in membros %}
-        <div class="col-lg-4 col-md-12 mb-4">
+        <div class="col">
           <div class="card bg-transparent">
             <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
               <div class="image-container">
                 <img src="{{ membro.foto.url }}" class="card-img-top member-image">
               </div>
-              <a href="#"></a>
               <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
             </div>
             <div class="card-body">
-              <h5 class="card-title"><a href="#">{{ membro.nome }}</a></h5>
+              <h5 class="card-title"><a href="{% url 'detalhe' membro.pk %}">{{ membro.nome }}</a></h5>
             </div>
           </div>
         </div>
       {% endfor %}
+      <div class="col">
+        <div class="card bg-transparent">
+          <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+            <div class="image-container">
+              <img src="https://th.bing.com/th/id/OIP.5iL4I4gztNsGfdMiuluF2wHaIB?w=162&h=180&c=7&r=0&o=5&pid=1.7" class="card-img-top member-image">
+            </div>
+            <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"><a href="{% url 'eu' %}">Wandinha</a></h5>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  
+  <a class="btn btn-warning" href="{% url 'altindex' %}">Mundo invertido</a>
 {% endblock %}
   
