--- a/membros/templates/membro.html
+++ b/membros/templates/membro.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-
+<h1 class="text-center">{{membro.nome}}</h1>
+<img class="" src="{{membro.foto.url}}">
+<p>Data de Nascimento: {{membro.data_nasc|date:"d/m/Y"}}</p>
+<p>Idade: {{membro.calcular_idade}}</p>
+<p>Curso: {{membro.curso}}</p>
+<p>Média do Curso: {{membro.media_curso}}</p>
 {% endblock %}
