--- a/static/membros/styles/style.css
+++ b/static/membros/styles/style.css
@@ -1,12 +1,10 @@
 .card {
-  
-    height: 3000px; /* Defina a altura fixa desejada */
+    margin-bottom: 15px;
+    height: 300px; /* Defina a altura fixa desejada */
     overflow: hidden; 
   }
   
-.card .card-img-top{
-  width: 100%; /* Preenche a largura do card */
-  height: 100%; /* Preenche a altura do card */
-  object-fit: cover; 
-  display: block;
+img{
+    width: 100%;
+    max-height: 300px;
 }
