--- a/membros/templates/altindex.html
+++ b/membros/templates/altindex.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
- <a class="btn btn-secondary" href="{% url 'eu' %}">Criar user</a>
+ <a class="btn btn-secondary" href="{% url 'criaruser' %}">Criar user</a>
 
 {% if users %}
 <p>Existem {{qtd_usuario}} usuários</p>
