--- a/membros/templates/index.html
+++ b/membros/templates/index.html
@@ -36,7 +36,10 @@
         </div>
       </div>
     </div>
+    <div class="text-center">
+      <a class="btn btn-warning mx-auto" href="{% url 'altindex' %}">Mundo invertido</a>
+    </div>
   </div>
-  <a class="btn btn-warning" href="{% url 'altindex' %}">Mundo invertido</a>
+  
 {% endblock %}
   
