--- a/static/membros/styles/style.css
+++ b/static/membros/styles/style.css
@@ -5,11 +5,20 @@
   }
   
 img{
-    width: auto;
+    width: 100%;
     max-height: 300px;
-    margin: 0 auto;
 }
 .btn{
   display: flex;
   justify-content: center;
+}
+main{
+    background-color: darkblue;
+    color: white;
+}
+html{
+    background-color: green;
+}
+nav{
+    background-color: yellow;
 }
