--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <!-- place navbar here -->
   </header>
   <main>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light bg-warning">
         <div class="container">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
